src/objects/loan__Floating_Rate__c.object
<CustomObject>
    <description>Floating Rates of Floating Rate Indexes</description>
    <fields>
        <fullName>loan__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick to activate the Floating Rate</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Floating_Rate_Index__c</fullName>
        <inlineHelpText>Floating Rate Index Type</inlineHelpText>
        <label>Floating Rate Index</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Floating_Rate_Index__c.loan__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Floating_Rate_Index__c</referenceTo>
        <relationshipLabel>Floating Rates</relationshipLabel>
        <relationshipName>Floating_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Rate_Effective_From__c</fullName>
        <inlineHelpText>Rate effecivity starts from &apos;Effective From&apos; date</inlineHelpText>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Rate_Effective_To__c</fullName>
        <inlineHelpText>Rate effectivity ends on &apos;Effective To&apos; date</inlineHelpText>
        <label>Effective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Rate_Percentage__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Rate Percenatge</inlineHelpText>
        <label>Rate Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Reset_Process_End_Time__c</fullName>
        <inlineHelpText>Reset Process Job End Date &amp; Time</inlineHelpText>
        <label>Reset Process End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Reset_Process_Job_Id__c</fullName>
        <inlineHelpText>Id of the Reset Process Job</inlineHelpText>
        <label>Reset Process Job Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reset_Process_Start_Time__c</fullName>
        <inlineHelpText>Reset Process Job Start Date &amp; Time</inlineHelpText>
        <label>Reset Process Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Reset_Process_Status__c</fullName>
        <inlineHelpText>Status of the Reset Process Job</inlineHelpText>
        <label>Reset Process Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aborted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Floating Rate</label>
    <nameField>
        <displayFormat>FR-{000000}</displayFormat>
        <label>Floating Rate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Floating Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>loan__Effective_Dates_Check</fullName>
        <active>true</active>
        <description>Effective To (if populated) should be greater than the Effective From</description>
        <errorConditionFormula>AND( NOT( ISBLANK( loan__Rate_Effective_To__c ) ) ,  loan__Rate_Effective_To__c  &lt;  loan__Rate_Effective_From__c )</errorConditionFormula>
        <errorMessage>Effective To date should be equal to or greater than the Effective From date.</errorMessage>
    </validationRules>
</CustomObject>